# RAG-LAW

./: .gitignore  Dockerfile  README.md  document_store.db  document_store.json  main.py  my_database.db  none  predict.py  pyproject.toml  vector_db.py
api/: main.py  run.ps1
modules/: articles_split.py  pdf_split.py  vector_db.py
scripts/: article_splitter.py
test/: search_test.py  search_test_from_scratch.py  search_test_w_given_dataset.py
